--- a/src/index.css
+++ b/src/index.css
@@ -6,6 +6,7 @@
     --text-secondary-color: #5B5B5E;
     --white-color: #FFFFFF;
     --separator-color: #D4D6E0;
+    --error-color: #c60b0b;
 }
 
 body {
